--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Calm and Composed Color Blog with Interactive UI</title>
+		<title>Manigandan Portfolio Website </title>
 		<link rel="stylesheet" href="/css/styles.css">
 		<link rel="stylesheet" href="/css/components.css">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
@@ -71,4 +71,5 @@
 		<script type="text/babel" src="/js/components/Footer.js"></script>
 		<script type="text/babel" src="/js/app.js"></script>
 	</body>
+
 </html>
