--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 		<script src="https://cdn.ezsite.ai/static/babel.min.js"></script>
 		<script project-code="cks7p0uh1drf" src="https://ezsite.ai/ezsite-api.js"></script>
 		<script src="https://ezsite.ai/ezsite-chatbot.js"></script>
-		<meta name="description" content="Explore a serene color blog featuring a cool UI, interactive elements, and hover effects. Discover inspiring content with images and descriptions.">
-		<meta property="og:title" content="Discover the Ultimate Calm Color Blog">
-		<meta property="og:description" content="Dive into a serene and interactive color blog with a cool UI, hover effects, and inspiring content. Perfect for design enthusiasts.">
-		<meta name="twitter:title" content="🌈 Calm & Cool Color Blog Awaits!">
-		<meta name="twitter:description" content="Explore a serene color blog with a sleek UI, hover effects, and inspiring visuals. Perfect for creative minds!">
+		<meta name="description" content="">
+		<meta property="og:title" content="">
+		<meta property="og:description" content ="">
+		<meta name="twitter:title" content="">
+		<meta name="twitter:description" content ="">
 		<script project-code="cks7p0uh1drf" src="https://easysite.ai/ezsite-api.js"></script>
 		<script src="https://easysite.ai/ezsite-chatbot.js"></script>
 	</head>
@@ -73,3 +73,4 @@
 	</body>
 
 </html>
+
