Add Open Graph meta tags to index.html
Added Open Graph meta tags to prevent link previews.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Manigandan Portfolio Website </title>
+
+        <!-- 🔥 Prevent WhatsApp / Facebook / LinkedIn from generating link preview -->
+        <meta property="og:title" content="">
+        <meta property="og:description" content="">
+        <meta property="og:image" content="">
+		
+        <title>Manigandan Portfolio Website</title>
+
 		<link rel="stylesheet" href="/css/styles.css">
 		<link rel="stylesheet" href="/css/components.css">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 		<script src="https://cdn.tailwindcss.com"></script>
+
 		<script>
         tailwind.config = {
             theme: {
@@ -41,9 +49,8 @@
                 }
             }
         }
-    
-		
 		</script>
+
 		<script src="https://cdn.ezsite.ai/static/react.production.min.js"></script>
 		<script src="https://cdn.ezsite.ai/static/react-dom.production.min.js"></script>
 		<script src="https://cdn.ezsite.ai/static/5.3.0/history.production.min.js"></script>
@@ -55,8 +62,10 @@
 		<script project-code="cks7p0uh1drf" src="https://easysite.ai/ezsite-api.js"></script>
 		<script src="https://easysite.ai/ezsite-chatbot.js"></script>
 	</head>
+	
 	<body class="bg-serene-50 text-gray-800 font-sans">
 		<div id="root"></div>
+
 		<script type="text/babel" src="/js/components/Header.js"></script>
 		<script type="text/babel" src="/js/components/Hero.js"></script>
 		<script type="text/babel" src="/js/components/ProjectCard.js"></script>
@@ -66,7 +75,5 @@
 		<script type="text/babel" src="/js/components/Footer.js"></script>
 		<script type="text/babel" src="/js/app.js"></script>
 	</body>
-
 </html>
-
 
